--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
         <section class="contact-container" id="Contact">
 
-            <form action="">
+            <form action="https://api.web3forms.com/submit">
                 <h1 class="heading">Контакт</h1>
                 <div class="form-name">
                     <div class="form-furs-name">
