--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <label for="questchan">Въпроси:</label>
                 <textarea name="" id="" placeholder="Вашите въпроси"></textarea>
-                <button class="form-btn">Изпрати</button>
+                <button class="form-btn" type="submit">Изпрати</button>
             </form>
         </section>
     </main>
