--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
         <section class="contact-container" id="Contact">
 
             <form action="https://api.web3forms.com/submit" method="POST">
-                <input type="hidden" name="access_key" value="2f0f185b-3faf-427d-bcae-b22258de5a4c
-                ">
+                <input type="hidden" name="access_key" value="2f0f185b-3faf-427d-bcae-b22258de5a4c">
                 <h1 class="heading">Контакт</h1>
                 <div class="form-name">
                     <div class="form-furs-name">
@@ -146,7 +145,7 @@
                 </div>
                 <label for="questchan">Въпроси:</label>
                 <textarea name="" id="" placeholder="Вашите въпроси"></textarea>
-                <button class="form-btn" type="submit">Изпрати</button>
+                <button class="form-btn submit">Изпрати</button>
             </form>
         </section>
     </main>
