--- a/index.html
+++ b/index.html
@@ -64,28 +64,28 @@
                         <i class='bx bxl-windows'></i>
                         <h3>Windows</h3>
                         <p>Инсталиране на операционна система Windows на вашата машина</p>
-                        <button class="btn more">read more</button>
+                        <button class="btn more">Повече информация</button>
                     </div>
 
                     <div class="box">
                         <i class="bi bi-ubuntu"></i>
                         <h3>Linux</h3>
                         <p>Инсталиране на операционна система Linux на вашата машина</p>
-                        <button class="btn more">read more</button>
+                        <button class="btn more">Повеце информация</button>
                     </div>
 
                     <div class="box">
                         <i class='bx bx-code-block'></i>
                         <h3>Сайт за дипломна работа</h3>
                         <p>Правим сайт за вашият дипломен или курсов проект</p>
-                        <button class="btn more2">read more</button>
+                        <button class="btn more2">Повеце информация</button>
                     </div>
 
                     <div class="box">
                         <i class='bx bxs-business'></i>
                         <h3>Професионален сайт за фирми</h3>
                         <p>Създаваме професионален сайт за вашата фирма</p>
-                        <button class="btn more2">read more</button>
+                        <button class="btn more2">Повеце информация</button>
                     </div>
                 </div>
             </div>
