--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="pick/logo.png" type="image/x-icon">
     <title>IT</title>
 </head>
 
 <body>
     <header>
         <div class="view_header_logo">
-            <img src="pick/logo.webp" alt="LOGO">
+            <img src="pick/logo.png" alt="LOGO">
             <h2>ITServiceVT</h2>
         </div>
         <nav>
@@ -151,7 +152,7 @@
     </main>
     <footer>
         <div class="info_footer">
-            <img src="pick/logo.webp" alt="">
+            <img src="pick/logo.png" alt="">
             <ul class="footer_ul_1">
                 <h3>За връзка</h3>
                 <li><a href="#Contact">Контакти</a></li>
